--- a/practice_5/package.json
+++ b/practice_5/package.json
@@ -12,6 +12,7 @@
     "bootstrap": "^4.5.3",
     "bootstrap-vue": "^2.21.2",
     "core-js": "^3.6.5",
+    "dotenv": "^8.2.0",
     "jsonp": "^0.2.1",
     "lodash": "^4.17.20",
     "vue": "^2.6.12",
