Project 5 ready, add api, add front

--- a/practice_5/package.json
+++ b/practice_5/package.json
@@ -20,6 +20,7 @@
     "vue-axios": "^3.2.3",
     "vue-lodash": "^2.1.2",
     "vue-router": "^3.5.1",
+    "vuedraggable": "^2.24.3",
     "vuejs-datepicker": "^1.6.2"
   },
   "devDependencies": {
